tests/regression/errors/basic/import_error_15.csd
// Import error test 15
yeet "nonexistent_module_15"
sus result drip = some_function(15)
